# streammoney-smartcontract

./: Cargo.toml  README.md
cli/: connect.js
src/: lib.rs
